--- a/html-advanced/style.css
+++ b/html-advanced/style.css
@@ -8,7 +8,7 @@
     height: 500px;
     border-radius: 15%;
     text-align: center;
-    vertical-align: bottom;
+    position: relative;
 }
 .square:hover {
     box-shadow: -6px 10px 8px 4px olivedrab;
@@ -18,4 +18,9 @@
     accent-color: red;
     place-self: center;
     width: clamp(300px, 60%, 850px);
+}
+fieldset {
+    border-radius: 2%;
+    max-width: 70%;
+    display:block;
 }
