--- a/html-advanced/signup form/style.css
+++ b/html-advanced/signup form/style.css
@@ -14,10 +14,11 @@ body {
     justify-content: center;
     align-content: space-between;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 1.5rem; 
+    font-size: 1.4rem; 
     max-width: 65vw;
     height: 100vh;
 }
+
 #spalsh-image {
     background-size: cover;
     background-repeat: no-repeat;
@@ -29,18 +30,19 @@ body {
     background-color: rgb(126, 126, 126, 0.4);
     display: flex;
     flex-direction: row;
-    max-height: 3.5rem;
-    margin: 1.5rem auto;
+    max-height: 4rem;
+    margin: auto;
+    margin-top: 15%;
     justify-content: center;
 }
 #logo-text span {
     font-family: "Norse Bold";
-    font-size: 3.5rem;
+    font-size: 4rem;
     color:floralwhite;
 }
 
 #logo-img {
-    max-height: 3rem;
+    max-height: 4rem;
 }
 
 a {
@@ -86,7 +88,7 @@ fieldset {
 fieldset input {
     height: 1.7rem;
     width: 90%;
-    border-radius: 3px;
+    border-radius: 4px;
     font-size: 1.2rem;
 }
 legend {
@@ -95,6 +97,7 @@ legend {
 } 
 label {
     display: block;
+    font-size: 1.2rem;
 }
 
 #create-btn {
@@ -120,4 +123,44 @@ fieldset input:required:valid {
 
 fieldset input::placeholder {
     font-size: 1rem;
+}
+
+@media screen and (max-width: 600px){
+    #main {
+        flex-direction: column;
+        max-width: 100vw;
+    }
+    #spalsh-image {
+        height: 30vh;
+    }
+    #credit {   
+        margin-top: auto;
+        top:auto;
+        text-align: right;
+        font-size: 0.8rem;
+    }
+    #logo {
+        background-color: rgb(126, 126, 126, 0.6);
+        display: flex;
+        flex-direction: row;
+        max-height: 4rem;
+        margin: auto;
+        margin-top: 25%;
+        justify-content: center;
+    }
+    #main-form {
+        display: flex;
+        max-width: 100%;
+        justify-content: center;
+        flex-direction: column;
+        gap: 1rem;
+        margin: 1rem;
+        min-width: 50%;
+    }
+    fieldset {
+
+
+        box-shadow: none;
+        
+    }  
 }
