--- a/html-advanced/grid/full dashbord design/style.css
+++ b/html-advanced/grid/full dashbord design/style.css
@@ -1,9 +1,12 @@
 #main {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position: absolute;
+    top: 0;
+    left: 0;
     display: grid;
-    grid-template-columns: minmax(min-content, max-content) auto;
+    grid-template-columns: minmax(min-content, 1fr) 5fr;
     grid-template-rows: 1fr 4fr;
-    font-size: medium;
+    font-size: large;
     font-weight: 600;
 /*     justify-content: center;
     width: 100vw;
@@ -11,6 +14,7 @@
     overflow:auto; */
 }
 
+/**/
 #sidebar {
     border: solid #3f6212 1px;
     grid-row: 1 /3 ;
@@ -24,11 +28,11 @@
     cursor: pointer;
 }
 #logo {
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     margin-bottom: 2.5rem;
     display: grid;
     grid-auto-flow: column;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 700;
     justify-content: start;
     padding-left: 1rem;
@@ -40,14 +44,14 @@
     cursor: pointer;
 }
 #logo-image {
-    height: 36px;
-    width: 36px;
+    height: 48px;
+    width: 48px;
 }
 #nav {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: repeat(6, auto);
-    gap: 0.5rem;
+    gap: 1rem;
     margin-bottom: 2.5rem;
 
 }
@@ -63,7 +67,7 @@
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: repeat(3, auto);
-    gap: 0.5rem;
+    gap: 1rem;
     margin-bottom: 2.5rem;
 }
 .options {
@@ -75,6 +79,7 @@
     gap: 0.5rem;
 }
 
+/*HEADER AND SEARCH BAR*/
 #header {
     display:grid;
     z-index: 2;
@@ -86,7 +91,8 @@
 }
 .header-row {
     display: grid;
-    grid-auto-flow: column;
+/*     grid-auto-flow: column; */
+    grid-template-columns: 2fr 1fr;
     gap: 1rem;
 }
 .header-row-1 {
@@ -97,17 +103,19 @@
 }
 #search {
     display: flex;
-    height: 1.5rem;
+    gap: 1rem;
+/*     height: 1.5rem; */
     justify-content: start;
-    padding-left: 0.5rem;
-
+    padding-left: 1rem;
+    align-items: center;
 }
 #search-key {
     background-color: #ecfccb /*#d9f99d*/;
-    border-radius:10px;
+    border-radius:1rem;
     min-width: 10rem;
+    min-height: 1.5rem;
     flex: 1;
-    text-indent: 5px;/*add text-indent*/
+    text-indent: 1rem;/*add text-indent*/
     outline: none;/*also remove outline*/
 }
 #avatar {
@@ -128,9 +136,6 @@
     margin-right: 1.5rem;
     cursor: pointer;
 }
-/* .clickable {
-    cursor: pointer;
-} */
 #user {
     display: flex;
     padding-left: 0.5rem;
@@ -160,68 +165,70 @@
     background-color: #4d7c0f;
     border: 1px solid #3f6212;
     font-size: 1rem;
-    border-radius: 10px;
+    border-radius: 2rem;
     color:#f7fee7;
     min-height: 2.5rem;
-    min-width: 6rem;
+    min-width: 7rem;
     margin-right: 1.5rem;
 }
 #buttons button:hover {
     background-color: #3f6212;
     border: 1px solid #365314;
+    cursor: pointer;
 }
 
+/*CARD AREA*/
 #main-content {
     grid-area: 2/2/3/3;
     background-color: #ecfccb/*#d9f99d*/;
-}
-h3 {
-    padding-left: 1rem;
-}
-#tiles {
     padding-left: 1rem;
     display: grid;
     grid-template-columns: 3fr 1fr;
     gap: 1rem;
 }
-#project-tiles {
+h3 {
+    padding-left: 1rem;
+}
+#project-cards {
     display: grid;
     gap: 1rem;
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: minmax(min-content, max-content) ; 
     
 }
+#project-heading {
+    grid-column-start: 1;
+    grid-column-end: -1;
+}
 .project{
-    display: grid;
-    
+    display: grid;    
     gap: 0.5rem;
     background-color: #f7fee7;    
     grid-template-columns: 0.5rem 1fr;
-    border:1px solid #ecfccb;
     box-shadow: 0.2rem 0.2rem 0.2rem #365314/*#d9f99d*/;
     border-radius: 10px;
+    box-sizing: content-box;
 
+}
+.bar{
+    background-color: #dc2626;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 .project-details {
     display: grid;
-    gap: 0.1rem
-}
+    grid-template-rows: 1fr 2fr 1fr;
+} 
 .tile-actions {
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
 .tile-actions img {
-    margin-right: 1rem;
-}
-.bar{
-
-    background-color: #dc2626;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-.tile-actions img {
-    max-width: 1rem;
-    max-height: 1rem;
+    margin-right: 1.5rem;
+    max-width: 1.5rem;
+    max-height: 1.5rem;
+    cursor: pointer;
 }
 .other-tiles {
     display: grid;
@@ -253,6 +260,7 @@ h3 {
     grid-template-columns: auto auto;
     box-sizing:content-box;
     margin: 1rem;
+    padding:1rem
 }
 .trends>img {
     max-width: 2rem;
