--- a/html-advanced/grid/full dashbord design/style.css
+++ b/html-advanced/grid/full dashbord design/style.css
@@ -193,7 +193,8 @@ h3 {
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-template-rows: minmax(min-content, max-content) ; 
+    /* grid-template-rows: minmax(min-content, max-content) ;  */
+    grid-auto-rows: minmax(min-content, max-content);
     
 }
 #project-heading {
